<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="368dp"
        android:layout_height="36dp"
        android:background="@drawable/generic_bg"
        android:gravity="center"
        android:text="@string/alertTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAlertName"
        android:layout_width="287dp"
        android:layout_height="39dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:hint="@string/alertName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBarThreshold"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></EditText>

    <EditText
        android:id="@+id/editTextAlert"
        android:layout_width="50dp"
        android:layout_height="39dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBarThreshold"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></EditText>

    <SeekBar
        android:id="@+id/seekBarThreshold"
        android:layout_width="247dp"
        android:layout_height="28dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:max="100"
        android:min="0"
        app:layout_constraintEnd_toStartOf="@+id/editTextAlert"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSMS" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <RadioGroup
        android:id="@+id/alert_radio_group"
        android:layout_width="293dp"
        android:layout_height="38dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarThreshold">

        <RadioButton
            android:id="@+id/km_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/km" />

        <RadioButton
            android:id="@+id/percent_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/percent" />
    </RadioGroup>

    <TextView
        android:id="@+id/alert_thrshold_title"
        android:layout_width="262dp"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/units"
        app:layout_constraintBottom_toTopOf="@+id/alert_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarThreshold"
        app:layout_constraintVertical_bias="0.846" />

    <TextView
        android:id="@+id/alert_seebar_header"
        android:layout_width="282dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="2dp"
        android:gravity="left|center"
        android:text="@string/alert_threshold_text"
        app:layout_constraintBottom_toTopOf="@+id/alert_thrshold_title"
        app:layout_constraintEnd_toEndOf="@+id/editTextAlert"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBarThreshold"
        app:layout_constraintTop_toBottomOf="@+id/editTextAlertName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/alert_cancel_button"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialogButtonOK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSMS" />

    <TextView
        android:id="@+id/notification_dialog_title"
        android:layout_width="353dp"
        android:layout_height="35dp"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/generic_bg"
        android:gravity="center"
        android:text="@string/notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_radio_group" />

    <CheckBox
        android:id="@+id/checkboxSoundNotif"
        android:layout_width="257dp"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:gravity="left|center"
        android:text="@string/sound_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_dialog_title" />

    <EditText
        android:id="@+id/editTextAlertEmail"
        android:layout_width="274dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="e-mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotificationIntevalTitle" />

    <EditText
        android:id="@+id/editTextSMS"
        android:layout_width="274dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/sms"
        android:inputType="phone"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAlertEmail" />

    <SeekBar
        android:id="@+id/seekBarAlertInterval"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="122dp"
        android:layout_height="38dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:max="60"
        android:min="10"
        android:progress="5"
        app:layout_constraintStart_toEndOf="@+id/textViewNotificationIntevalTitle"
        app:layout_constraintTop_toBottomOf="@+id/notification_dialog_title" />

    <EditText
        android:id="@+id/editTextAllertInterval"
        android:layout_width="50dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="number"
        android:text="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/seekBarAlertInterval"
        app:layout_constraintTop_toBottomOf="@+id/notification_dialog_title"
        tools:text="10" />

    <TextView
        android:id="@+id/textViewNotificationIntevalTitle"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/set_intervall"
        android:textSize="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxSoundNotif" />
</android.support.constraint.ConstraintLayout>